--- a/package.json
+++ b/package.json
@@ -9,11 +9,16 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@auth/mongodb-adapter": "^3.4.2",
     "@chakra-ui/react": "^2.8.2",
     "@emotion/react": "^11.13.3",
     "@emotion/styled": "^11.13.0",
+    "@types/bcryptjs": "^2.4.6",
+    "bcryptjs": "^2.4.3",
     "framer-motion": "^11.5.4",
+    "mongodb": "^6.9.0",
     "next": "14.2.9",
+    "next-auth": "^4.24.7",
     "react": "^18",
     "react-dom": "^18"
   },
