--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@types/bcryptjs": "^2.4.6",
     "bcryptjs": "^2.4.3",
     "framer-motion": "^11.5.4",
+    "jsonwebtoken": "^9.0.2",
     "mongodb": "^6.9.0",
     "next": "14.2.9",
     "next-auth": "^4.24.7",
@@ -23,6 +24,7 @@
     "react-dom": "^18"
   },
   "devDependencies": {
+    "@types/jsonwebtoken": "^9.0.6",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
