--- a/package.json
+++ b/package.json
@@ -9,10 +9,10 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "@auth/mongodb-adapter": "^3.4.2",
     "@chakra-ui/react": "^2.8.2",
     "@emotion/react": "^11.13.3",
     "@emotion/styled": "^11.13.0",
+    "@reduxjs/toolkit": "^2.2.7",
     "@types/bcryptjs": "^2.4.6",
     "bcryptjs": "^2.4.3",
     "framer-motion": "^11.5.4",
@@ -21,7 +21,9 @@
     "next": "14.2.9",
     "next-auth": "^4.24.7",
     "react": "^18",
-    "react-dom": "^18"
+    "react-dom": "^18",
+    "react-icons": "^5.3.0",
+    "react-redux": "^9.1.2"
   },
   "devDependencies": {
     "@types/jsonwebtoken": "^9.0.6",
