--- a/package.json
+++ b/package.json
@@ -24,7 +24,8 @@
     "react": "^18",
     "react-dom": "^18",
     "react-icons": "^5.3.0",
-    "react-redux": "^9.1.2"
+    "react-redux": "^9.1.2",
+    "redux-thunk": "^3.1.0"
   },
   "devDependencies": {
     "@types/jsonwebtoken": "^9.0.6",
