--- a/package.json
+++ b/package.json
@@ -16,9 +16,11 @@
     "@emotion/styled": "^11.13.0",
     "@reduxjs/toolkit": "^2.2.7",
     "@types/bcryptjs": "^2.4.6",
+    "@types/js-cookie": "^3.0.6",
     "@types/uuid": "^10.0.0",
     "bcryptjs": "^2.4.3",
     "framer-motion": "^11.5.4",
+    "js-cookie": "^3.0.5",
     "jsonwebtoken": "^9.0.2",
     "mongodb": "^6.9.0",
     "next": "14.2.9",
